--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/misc.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/misc.yml
@@ -9,3 +9,24 @@
     - CP14DirtBlock1
     chance: 1
     deleteSpawnerAfterSpawn: false
+  - type: EmitSoundOnSpawn
+    sound:
+      collection: CP14Digging
+
+- type: entity
+  id: CP14RandomSnowLootSpawner
+  name: dirt spawner
+  parent: CP14SnowEffect
+  categories: [ ForkFiltered ]
+  components:
+  - type: RandomSpawner
+    prototypes:
+    - CP14Snowball
+    chance: 1
+    deleteSpawnerAfterSpawn: false
+  - type: EmitSoundOnSpawn
+    sound:
+      path: /Audio/_CP14/Effects/snowball.ogg
+      params:
+        variation: 0.250
+        volume: 15
