--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/snowdrift.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/snowdrift.yml
@@ -45,3 +45,39 @@
       collection: FootstepSnow
       params:
         volume: 8
+  - type: Damageable
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTypeTrigger
+        damageType: Heat
+        damage: 20
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+    - trigger:
+        !type:DamageTrigger
+        damage: 40
+      behaviors:
+      - !type:DoActsBehavior
+        acts: ["Destruction"]
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14Snowball:
+            min: 1
+            max: 3
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14SnowEffect:
+            min: 1
+            max: 2
+  - type: MeleeSound
+    soundGroups:
+      Brute:
+        path: /Audio/_CP14/Effects/snowball.ogg
+        params:
+          variation: 0.250
+          volume: 15
+  - type: Construction
+    graph: CP14Snowdrift
+    node: CP14Snowdrift
