--- a/Resources/Prototypes/_CP14/Entities/Structures/Walls/natural.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Walls/natural.yml
@@ -125,14 +125,20 @@
       behaviors:
       - !type:PlaySoundBehavior
         sound:
-          path: /Audio/Effects/break_stone.ogg #TODO
+          path: /Audio/_CP14/Effects/snowball.ogg
           params:
-            volume: -6
-      #- !type:SpawnEntitiesBehavior
-      #  spawn:
-      #    CP14DirtBlock1:
-      #      min: 2
-      #      max: 3
+            variation: 0.250
+            volume: 15
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14Snowball:
+            min: 3
+            max: 5
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14SnowEffect:
+            min: 2
+            max: 3
       - !type:DoActsBehavior
         acts: ["Destruction"]
 
