--- a/Resources/Prototypes/_CP14/Procedural/biome_template_snow.yml
+++ b/Resources/Prototypes/_CP14/Procedural/biome_template_snow.yml
@@ -36,20 +36,6 @@
   layers:
     - !type:BiomeMetaLayer
       template: CP14SnowFill
-    - !type:BiomeEntityLayer # More Trees
-      threshold: 0.4
-      noise:
-        seed: 4
-        noiseType: OpenSimplex2
-        fractalType: FBm
-        frequency: 0.7
-      allowedTiles:
-        - CP14FloorSnow
-        - CP14FloorSnowDeep
-        - CP14FloorSnowDeepDeep
-      entities:
-        - CP14FloraTreeSnow
-        #- CP14FloraTreeGreenLarge
     - !type:BiomeEntityLayer # Snowdrifts
       threshold: 0.3
       noise:
@@ -68,3 +54,91 @@
         - CP14FloorSnowDeepDeep
       entities:
         - CP14Snowdrift
+    - !type:BiomeEntityLayer # Rare Trees
+      threshold: 0.8
+      noise:
+        seed: 0
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 2
+      allowedTiles:
+        - CP14FloorSnow
+        - CP14FloorSnowDeep
+        - CP14FloorSnowDeepDeep
+      entities:
+        - CP14FloraTreeSnow
+        #- CP14FloraTreeGreenLarge
+
+# Подбиомы
+
+# Лес
+
+- type: biomeTemplate
+  id: CP14SnowlandForest
+  layers:
+    - !type:BiomeMetaLayer
+      template: CP14Snowland
+    - !type:BiomeEntityLayer # More Trees
+      threshold: 0.2
+      noise:
+        seed: 4
+        noiseType: OpenSimplex2
+        fractalType: FBm
+        frequency: 2
+      allowedTiles:
+        - CP14FloorSnow
+        - CP14FloorSnowDeep
+        - CP14FloorSnowDeepDeep
+      entities:
+        - CP14FloraTreeSnow
+        #- CP14FloraTreeGreenLarge
+
+# Холмы
+
+- type: biomeTemplate
+  id: CP14SnowlandHills # Холмы
+  layers:
+    - !type:BiomeMetaLayer
+      template: CP14SnowlandForest
+    - !type:BiomeTileLayer 
+      tile: CP14FloorBase
+      invert: true
+      threshold: 0.5
+      noise:
+        seed: 6
+        noiseType: OpenSimplex2
+        frequency: 0.03
+        lacunarity: 2
+        fractalType: Ridged
+        octaves: 1
+        cellularDistanceFunction: Euclidean
+        cellularReturnType: Distance
+        cellularJitterModifier: 0.7
+        domainWarpType: OpenSimplex2Reduced
+        domainWarpAmp: 285
+    - !type:BiomeEntityLayer # Walls
+      allowedTiles:
+        - CP14FloorBase
+      threshold: -1.0
+      entities:
+        - CP14WallSnow
+
+- type: biomeTemplate
+  id: CP14SnowlandTestResult
+  layers:
+    - !type:BiomeMetaLayer
+      template: CP14Snowland
+    - !type:BiomeMetaLayer
+      template: CP14SnowlandForest
+      threshold: 0.2
+      noise:
+        seed: 18
+        frequency: 0.02
+        fractalType: None
+    - !type:BiomeMetaLayer
+      template: CP14SnowlandHills
+      threshold: 0.4
+      noise:
+        seed: 14
+        frequency: 0.02
+        fractalType: None
