--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
@@ -1,9 +1,8 @@
 - type: cp14DemiplaneModifier
   id: EnemyXeno
   name: cp14-modifier-xeno
-  difficulty: 0.4
   categories:
-  - Danger
+    Danger: 0.4
   requiredTags:
   - CP14DemiplaneUnderground
   layers:
@@ -21,10 +20,9 @@
 - type: cp14DemiplaneModifier
   id: EnemyZombie
   name: cp14-modifier-zombie
-  difficulty: 0.3
   generationWeight: 1.5
   categories:
-  - Danger
+    Danger: 0.3
   layers:
     - !type:OreDunGen
       entity: CP14SpawnMobUndeadZombieRandom
@@ -35,10 +33,9 @@
 - type: cp14DemiplaneModifier
   id: EnemySkeleton
   name: cp14-modifier-zombie
-  difficulty: 0.3
   generationWeight: 1.5
   categories:
-  - Danger
+    Danger: 0.5
   layers:
     - !type:OreDunGen
       entity: SpawnPointGhostDemiplaneSkeleton
@@ -49,9 +46,8 @@
 - type: cp14DemiplaneModifier
   id: EnemyDyno
   name: cp14-modifier-dyno
-  difficulty: 0.3
   categories:
-  - Danger
+    Danger: 0.4
   requiredTags:
   - CP14DemiplaneOpenSky
   - CP14DemiplaneGrass
@@ -65,9 +61,8 @@
 - type: cp14DemiplaneModifier
   id: SmallHydra
   name: cp14-modifier-dyno
-  difficulty: 0.3
   categories:
-  - Danger
+    Danger: 0.3
   requiredTags:
   - CP14DemiplaneGrass
   layers:
@@ -80,9 +75,8 @@
 - type: cp14DemiplaneModifier
   id: MonsterMosquito
   name: cp14-modifier-dyno
-  difficulty: 0.15
   categories:
-  - Danger
+    Danger: 0.2
   requiredTags:
   - CP14DemiplaneGrass
   layers:
@@ -95,9 +89,8 @@
 - type: cp14DemiplaneModifier
   id: EnemyMole
   name: cp14-modifier-mole
-  difficulty: 0.4
   categories:
-  - Danger
+    Danger: 0.4
   requiredTags:
   - CP14DemiplaneUnderground
   - CP14DemiplaneCave
