--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Fun/lol.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Fun/lol.yml
@@ -1,8 +1,9 @@
 - type: cp14DemiplaneModifier
   id: RoyalPumpkin
   generationWeight: 0.1
+  generationProb: 0.1
   categories:
-    Fun: 0.2 
+    Fun: 1
   requiredTags:
   - CP14DemiplaneGrass
   - CP14DemiplaneOpenSky
@@ -13,25 +14,6 @@
       - CP14FloorGrassLight
       - CP14FloorGrassTall
       entity: CP14RoyalPumpkin
-      count: 1
-      minGroupSize: 1
-      maxGroupSize: 1
-
-- type: cp14DemiplaneModifier
-  id: LOTRoyalPumpkin
-  generationWeight: 0.01
-  categories:
-    Fun: 0.5
-  requiredTags:
-  - CP14DemiplaneGrass
-  - CP14DemiplaneOpenSky
-  layers:
-    - !type:OreDunGen
-      tileMask: 
-      - CP14FloorGrass
-      - CP14FloorGrassLight
-      - CP14FloorGrassTall
-      entity: CP14RoyalPumpkin
-      count: 20
+      count: 10
       minGroupSize: 1
       maxGroupSize: 1
