--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
@@ -215,6 +215,62 @@
     count: 10
 
 - type: entity
+  id: CP14LucensWoodLog
+  parent: CP14WoodLog
+  name: lucens log
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/Materials/lucens_wood.rsi
+    layers:
+      - state: log
+        map: ["random"]
+  - type: RandomSprite
+    available:
+      - random:
+          log: ""
+          log_2: ""
+          log_3: ""
+  - type: Log
+    spawnedPrototype: CP14LucensWoodenPlanks1
+    spawnCount: 3
+
+- type: entity
+  id: CP14LucensWoodenPlanks1
+  parent: CP14WoodenPlanks1
+  name: lucens planks
+  suffix: 1
+  components:
+  - type: Sprite
+    sprite: _CP14/Objects/Materials/lucens_wood.rsi
+    layers:
+      - state: planks
+        map: ["base"]
+  - type: Stack
+    stackType: CP14LucensWoodenPlanks
+    count: 1
+    baseLayer: base
+    layerStates:
+    - planks
+    - planks_2
+    - planks_3
+  - type: FloorTile
+    placeTileSound:
+      path: /Audio/Effects/woodenclosetclose.ogg
+      params:
+        variation: 0.03
+        volume: 2
+    outputs:
+      - CP14FloorLucensWoodPlanks
+
+- type: entity
+  id: CP14LucensWoodenPlanks10
+  parent: CP14LucensWoodenPlanks1
+  suffix: 10
+  components:
+  - type: Stack
+    count: 10
+
+- type: entity
   id: CP14Nail1
   parent: BaseItem
   name: nails
