--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/trees.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/trees.yml
@@ -180,3 +180,120 @@
         treelarge04: ""
         treelarge05: ""
         treelarge06: ""
+
+- type: entity
+  id: CP14BaseLucensTree
+  parent: CP14BaseTree
+  name: lucens tree
+  components:
+  - type: PointLight
+    radius: 1.5
+    energy: 2
+    color: "#87CEEB"
+  - type: Sprite
+    noRot: true
+    sprite: _CP14/Structures/Flora/lucens.rsi
+    drawdepth: Mobs
+    offset: 0,0.9
+    layers:
+    - state: tree03
+      map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        tree03: ""
+        tree04: ""
+        tree05: ""
+        tree06: ""
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTypeTrigger
+        damageType: Heat
+        damage: 100
+      behaviors:
+        - !type:DoActsBehavior
+          acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 200
+      behaviors:
+        - !type:DoActsBehavior
+          acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 75
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/tree_fell.ogg
+          params:
+            volume: 5
+            variation: 0.05
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14LucensWoodLog:
+            min: 1
+            max: 3
+
+- type: entity
+  parent: CP14BaseLucensTree
+  id: CP14BaseLucensTreeLarge
+  name: large lucens tree
+  components:
+  - type: Sprite
+    noRot: true
+    sprite: _CP14/Structures/Flora/lucens.rsi
+    drawdepth: Mobs
+    offset: 0,0.9
+    layers:
+    - state: tree01
+      map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        tree01: ""
+        tree02: ""
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.18,-0.35,0.18,0.35"
+        density: 2000
+        layer:
+        - WallLayer
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTypeTrigger
+        damageType: Heat
+        damage: 100
+      behaviors:
+        - !type:DoActsBehavior
+          acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 200
+      behaviors:
+        - !type:DoActsBehavior
+          acts: [ "Destruction" ]
+    - trigger:
+        !type:DamageTrigger
+        damage: 120
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/tree_fell.ogg
+          params:
+            volume: 5
+            variation: 0.05
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14LucensWoodLog:
+            min: 3
+            max: 6
