--- a/Resources/Prototypes/_CP14/Stacks/materials.yml
+++ b/Resources/Prototypes/_CP14/Stacks/materials.yml
@@ -55,6 +55,20 @@
   maxCount: 10
 
 - type: stack
+  id: CP14MithrilBar
+  name: cp14-stack-mithril-bars
+  spawn: CP14MithrilBar1
+  icon: { sprite: _CP14/Objects/Materials/mithril_bar.rsi, state: bar_2 }
+  maxCount: 10
+
+- type: stack
+  id: CP14LucensWoodenPlanks
+  name: cp14-material-lucens-planks
+  spawn: CP14LucensWoodenPlanks1
+  icon: { sprite: _CP14/Objects/Materials/lucens_wood.rsi, state: planks_2 }
+  maxCount: 10
+
+- type: stack
   id: CP14GlassSheet
   name: cp14-stack-glass-sheet
   spawn: CP14GlassSheet1
