--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_caves_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_caves_ring.yml
@@ -1,5 +1,6 @@
 - type: cp14DemiplaneLocation
   id: T1CavesRing
+  tier: 2
   locationConfig: CP14DemiplaneCavesRing
   name: cp14-demiplane-location-cave
   tags:
