--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
@@ -1,5 +1,6 @@
 - type: cp14DemiplaneLocation
   id: T1Caves
+  tier: 1
   locationConfig: CP14DemiplaneCaves
   name: cp14-demiplane-location-cave
   tags:
