--- a/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
@@ -71,14 +71,14 @@
   components:
   - type: StorageFill
     contents:
-      - id: CP14DemiplanKey
+      - id: CP14DemiplaneKeyT1
         amount: 4
-      - id: CP14DemiplanKey
+      - id: CP14DemiplaneKeyT1
         amount: 1
         prob: 0.5
-      - id: CP14DemiplanKey
+      - id: CP14DemiplaneKeyT2
         amount: 1
-        prob: 0.5
+        prob: 0.2
 
 - type: entity
   parent: CP14BrassChest
