--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -204,6 +204,10 @@ CP14DungeonExitAutoLink: CP14LaddersUpStoneAutoLink
 
 CP14BaseBroom: null
 
+#2024-15-12
+CP14DemiplanKey: CP14DemiplaneKeyT1
+CP14SpawnerExpeditionLootCommon: CP14SpawnerDemiplaneLootT1
+
 # <---> CrystallEdge migration zone end
 
 
