--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/ores.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/ores.yml
@@ -8,7 +8,7 @@
   categories:
     Reward: 0.4
   requiredTags:
-  - CP14DemiplaneCave
+  - CP14DemiplaneOres
   layers:
     - !type:OreDunGen
       entityMask: 
@@ -26,7 +26,7 @@
   categories:
     Reward: 0.3
   requiredTags:
-  - CP14DemiplaneCave
+  - CP14DemiplaneOres
   layers:
     - !type:OreDunGen
       entityMask: 
@@ -46,7 +46,7 @@
   categories:
     Reward: 0.5
   requiredTags:
-  - CP14DemiplaneCave
+  - CP14DemiplaneOres
   layers:
     - !type:OreDunGen
       entityMask: 
@@ -64,7 +64,7 @@
   categories:
     Reward: 0.5
   requiredTags:
-  - CP14DemiplaneCave
+  - CP14DemiplaneOres
   layers:
     - !type:OreDunGen
       entityMask: 
