--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Fun/lol.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Fun/lol.yml
@@ -1,6 +1,9 @@
 - type: cp14DemiplaneModifier
   id: RoyalPumpkin
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   generationWeight: 0.1
   generationProb: 0.1
   categories:
