--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/crystals.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/crystals.yml
@@ -2,7 +2,8 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystal
-  tier: 1
+  tiers:
+    - 1
   name: cp14-modifier-quartz-crystal
   categories:
     Reward: 0.1
@@ -21,7 +22,10 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalRubies
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   name: cp14-modifier-quartz-crystal
   generationWeight: 0.1
   categories:
@@ -40,7 +44,10 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalTopazes
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   name: cp14-modifier-quartz-crystal
   generationWeight: 0.1
   categories:
@@ -59,7 +66,10 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalEmeralds
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   name: cp14-modifier-quartz-crystal
   generationWeight: 0.1
   categories:
@@ -80,7 +90,10 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalSapphires
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   name: cp14-modifier-quartz-crystal
   generationWeight: 0.1
   categories:
@@ -101,7 +114,10 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalAmethysts
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   name: cp14-modifier-quartz-crystal
   generationWeight: 0.1
   categories:
@@ -120,7 +136,10 @@
 
 - type: cp14DemiplaneModifier
   id: QuartzCrystalDiamonds
-  tier: 2
+  tiers:
+    - 1
+    - 2
+    - 3
   name: cp14-modifier-quartz-crystal
   generationWeight: 0.1
   categories:
