--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/herbals.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Reward/herbals.yml
@@ -2,7 +2,9 @@
 
 - type: cp14DemiplaneModifier
   id: Dayflin
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-dayflin
   categories:
     Reward: 0.2
@@ -22,7 +24,9 @@
 
 - type: cp14DemiplaneModifier
   id: FlyAgaric
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-fly-agaric
   categories:
     Reward: 0.2
@@ -42,7 +46,9 @@
 
 - type: cp14DemiplaneModifier
   id: BlueAmanita
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-blue-amanita
   categories:
     Reward: 0.2
@@ -61,7 +67,9 @@
 
 - type: cp14DemiplaneModifier
   id: BloodFlower
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-blood-flower
   categories:
     Reward: 0.2
@@ -80,7 +88,9 @@
 
 - type: cp14DemiplaneModifier
   id: WildSage
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-wild-sage
   categories:
     Reward: 0.2
@@ -102,7 +112,8 @@
 
 - type: cp14DemiplaneModifier
   id: LumiShroom
-  tier: 2
+  tiers:
+    - 2
   name: cp14-modifier-lumisroom
   categories:
     Reward: 0.2
