--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Modifiers/Danger/mobs.yml
@@ -2,7 +2,8 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyZombie
-  tier: 1
+  tiers:
+    - 1
   name: cp14-modifier-zombie
   generationWeight: 1.5
   categories:
@@ -16,7 +17,9 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyDyno
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-dyno
   categories:
     Danger: 0.4
@@ -32,7 +35,9 @@
 
 - type: cp14DemiplaneModifier
   id: MonsterMosquito
-  tier: 1
+  tiers:
+    - 1
+    - 2
   name: cp14-modifier-dyno
   categories:
     Danger: 0.2
@@ -47,7 +52,8 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyXeno
-  tier: 1
+  tiers:
+    - 1
   name: cp14-modifier-xeno
   categories:
     Danger: 0.4
@@ -67,7 +73,8 @@
 
 - type: cp14DemiplaneModifier
   id: SmallHydra
-  tier: 1
+  tiers:
+    - 1
   name: cp14-modifier-dyno
   categories:
     Danger: 0.3
@@ -84,7 +91,8 @@
 
 - type: cp14DemiplaneModifier
   id: EnemySkeleton
-  tier: 2
+  tiers:
+    - 2
   name: cp14-modifier-zombie
   generationWeight: 1.5
   categories:
@@ -98,7 +106,8 @@
 
 - type: cp14DemiplaneModifier
   id: EnemyMole
-  tier: 2
+  tiers:
+    - 2
   name: cp14-modifier-mole
   categories:
     Danger: 0.4
